@startuml name

class Usuario {
    - id: Int
    - nome: String
    - email: String
    - senha: String
    + atualizarNome(novoNome: String): void
    + atualizarEmail(novoEmail: String): void
    + atualizarSenha(novaSenha: String): void
    + autenticar(email: String, senha: String): Boolean
}

class Transacao {
    - id: Int
    - data: LocalDate
    - valor: Double
    - tipo: TipoTransacao
    - categoria: String
    - usuarioId: Int
}

enum TipoTransacao {
    ENTRADA
    SAIDA
}

class Meta {
    - id: Int
    - usuarioId: Int
    - categoria: String
    - valorLimite: Double
    - periodo: String
}

class Investimento {
    - id: Int
    - usuarioId: Int
    - valorInvestido: Double
    - taxa: Double
    - dataInicial: LocalDate
    - dataFinal: LocalDate
    + calculaRendimento(): Double

}

Usuario --> Transacao : possui >
Usuario --> Meta : define >
Usuario --> Investimento : simula >

@enduml
